# sigslot

./: CMakeLists.txt  package.xml
include/sigslot/adapter/: boost.hpp
test/: boost-tracking.cpp
